Fix temp-show visibility

--- a/libk/assets/css/main.css
+++ b/libk/assets/css/main.css
@@ -3183,7 +3183,7 @@ img.social {
 }
 
 .temp-show {
-    display: block;
+    display: block !important
 }
 
 .generic-content h1 {
